[samridh] updated: Updated Notes on Swagger
